<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_app_bcground"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        tools:context=".ui.SubmitActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_main_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:padding="@dimen/_13sdp"
            android:src="@drawable/ic_gads" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_project_summition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_main_top"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/project_submission"
            android:textColor="@color/gold"
            android:textSize="@dimen/_15sdp" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/txt_project_summition"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/ic_divider" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_divider"
            android:layout_marginTop="@dimen/_60sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_txt_fName"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_txt_back_ground"
                android:hint="@string/first_name"
                android:lines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_txt_lName"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_txt_back_ground"
                android:hint="@string/last_name"
                android:lines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_txt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/name_layout"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/edit_txt_back_ground"
            android:hint="@string/email_address"
            android:lines="1"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_txt_project_link"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/edit_txt_email"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/edit_txt_back_ground"
            android:hint="@string/project_on_github_link"
            android:lines="1"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/edit_txt_project_link"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_submit" />
    </RelativeLayout>
</layout>